removes some more bugs
removes bug with header position break at auth modal open, removes mistake with  input tag

--- a/src/sass/components/_auth-form.scss
+++ b/src/sass/components/_auth-form.scss
@@ -453,7 +453,7 @@
   pointer-events: initial;
 
   color: #c4c3ca;
-  background-color: rgba(31, 32, 41, 0.9);
+  background-color: rgba(0, 0, 0, 0.9);
   overflow-x: hidden;
 }
 
